[tool.poetry]
name = "gatheride-test"
version = "0.1.0"
description = ""
authors = ["inaawe <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
supabase = "^0.7.1"
telegram = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
